--- a/RichardGere/index.html
+++ b/RichardGere/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Richarg Gere</h1>
+    <h1>Richarg GGGere</h1>
     <p>From Wikipedia, the free encyclopedia</p>
     <p><b>Richard Tiffany Gere</b> (/giər/ <i>GEER</i>;<sup>[1][2]</sup> born August 31, 1949) is an American actor. He began
         in films in
